--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -77,3 +77,7 @@
   name = "gitlab.com/tokend/addrstate"
   branch = "feature/v3"
 
+
+[[constraint]]
+  name = "github.com/cheekybits/genny"
+  version = "1.0.0"
