--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,12 @@ deploy:
   - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
   - docker push $PROJECT/$IMAGE_NAME:$IMAGE_TAG
   on:
+    branch: true
     tags: true
 - provider: script
   script:
   - echo "$GITLABREG_PASSWORD" | docker login -u "GITLABREG_USERNAME" --password-stdin registry.gitlab.com
   - docker push registry.gitlab.com/$PROJECT/docker-registry/$IMAGE_NAME:$IMAGE_TAG
   on:
+    all_branches: true
     tags: false
