--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,18 @@ env:
 script:
 - export IMAGE_TAG=$(test -z $TRAVIS_TAG && echo $TRAVIS_COMMIT || echo $TRAVIS_TAG)
 - docker build -t $PROJECT/$IMAGE_NAME:$IMAGE_TAG .
+before_deploy:
+  - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+  - echo "$GITLABREG_PASSWORD" | docker login -u "GITLABREG_USERNAME" --password-stdin registry.gitlab.com
 deploy:
 - provider: script
   script:
-  - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
   - docker push $PROJECT/$IMAGE_NAME:$IMAGE_TAG
   on:
     branch: true
     tags: true
 - provider: script
   script:
-  - echo "$GITLABREG_PASSWORD" | docker login -u "GITLABREG_USERNAME" --password-stdin registry.gitlab.com
   - docker push registry.gitlab.com/$PROJECT/docker-registry/$IMAGE_NAME:$IMAGE_TAG
   on:
     all_branches: true
